# TradingAgents

./: .dockerignore  .env.example  .gitignore  market_trend_align.csv  pyproject.toml  requirements.txt
concept_graph_output/2026-06-05/: clusters.json  edges.json  memberships.json
concept_graph_output/2026-06-08/: clusters.json  edges.json
concept_graph_output/2026-06-09/: clusters.json  memberships.json
concept_graph_output/2026-06-10/: clusters.json  edges.json  memberships.json
deploy/: Dockerfile  cloudbuild.yaml  entrypoint.sh  entrypoint_concept_graph.sh  entrypoint_regime.sh
docs/: concept-graph-M1.md  concept-graph-M2.md  concept-graph-design.md  concept-graph-fullrun-analysis.md  event-corpus-pipeline.md  macro_daily_deploy.py  nn-pipeline-roadmap.md  regime-gate-deploy.md  regime-gate-design.md  regime-gate-feedback-design.md  regime-gate-main-flow.md  vllm-gpu-setup.md
regime_gate_output/2026-06-09/: regime_report.json  scorecard.json
regime_gate_output/2026-06-10/: regime_report.json  scorecard.json
scripts/: align_market_trend.py  analyze_conviction.py  analyze_events.py  audit_news_coverage.py  backfill_evaluate.py  backfill_events.py  backfill_regime.py  evaluate_regime.py  extract_catalysts.py  extract_events.py  model_manager.py  rebuild_concept_graph.py  relabel_price_in.py  rollback_concept_graph.py  run_concept_graph_daily.sh  run_regime_gate.py  run_regime_gate_daily.sh  serve_vllm.sh
tests/: test_catalysts.py  test_community.py  test_concept_graph.py  test_events.py  test_fmp_calendar.py  test_fmp_premarket_filter.py  test_hf_resolver.py  test_news_vendors.py  test_regime_cascade.py  test_regime_evaluate.py  test_regime_l1.py  test_regime_l2.py  test_regime_l3.py  test_regime_schemas.py  test_regime_store.py  test_sectors_tickers.py  test_us_fundamentals.py
tradingagents/concept_graph/: __init__.py  build_graph.py  community.py  config.py  gcs.py  naming.py  schemas.py  sectors.py  service.py  store.py
tradingagents/concept_graph/sources/: __init__.py  comention.py  comovement.py
tradingagents/dataflows/: _http.py  alpha_vantage_common.py  fmp.py  interface.py  massive.py  secrets.py
tradingagents/llm_clients/: __init__.py  api_key_env.py  capabilities.py  config.py  factory.py  google_client.py  hf_resolver.py  llm_config.example.json  local_models.py  openai_client.py  vllm_service.py
tradingagents/market_tools/: __init__.py
tradingagents/market_tools/us/: __init__.py  _bigquery.py  fundamentals.py  macro.py  news.py  prices.py  splits.py  universe.py
tradingagents/regime/: __init__.py  _llm.py  catalysts.py  commander.py  evaluate.py  events.py  gcs.py  l1_stock.py  l2_concept.py  l3_regime.py  price_in.py  schemas.py  source_reliability.py  store.py  tickers.py
