[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tradingagents"
version = "0.2.5"
description = "TradingAgents: Multi-Agents LLM Financial Trading Framework"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain-core>=0.3.81",
    "backtrader>=1.9.78.123",
    "langchain-anthropic>=0.3.15",
    "langchain-experimental>=0.3.4",
    "langchain-google-genai>=4.0.0",
    "langchain-openai>=0.3.23",
    "langgraph>=0.4.8",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "pandas>=2.3.0",
    "parsel>=1.10.0",
    "pytz>=2025.2",
    "questionary>=2.1.0",
    "redis>=6.2.0",
    "requests>=2.32.4",
    "rich>=14.0.0",
    "typer>=0.21.0",
    "setuptools>=80.9.0",
    "stockstats>=0.6.5",
    "tqdm>=4.67.1",
    "typing-extensions>=4.14.0",
    "yfinance>=0.2.63",
]

[project.optional-dependencies]
# Regime gate + concept graph subsystem (docs/regime-gate-design.md,
# docs/concept-graph-design.md). Kept optional so the core framework and
# its tests do not pull in GCP/graph deps unless this layer is used.
regime = [
    "google-cloud-bigquery>=3.25.0",
    # Storage Read API: fast bulk .to_dataframe() (the concept graph pulls a full
    # year of daily bars for the whole universe) and silences the "BigQuery
    # Storage module not found" REST-fallback warning. Falls back to REST if the
    # SA lacks bigquery.readsessions.create, so it never breaks the run.
    "google-cloud-bigquery-storage>=2.25.0",
    # BigQuery .to_dataframe() needs these for typed (DATE/etc.) columns; the
    # local conda env had them implicitly, the slim image does not.
    "db-dtypes>=1.2.0",
    "pyarrow>=14.0.0",
    # google_client.py imports `google.genai` directly; usually pulled by
    # langchain-google-genai, declared explicitly so the slim image is safe.
    "google-genai>=0.3.0",
    "google-cloud-secret-manager>=2.20.0",
    "google-cloud-storage>=2.18.0",
    "networkx>=3.3",
    "leidenalg>=0.10.2",
    "python-igraph>=0.11.3",
]
# Self-hosted model tooling for the dev box: just the HF downloader/resolver
# (scripts/model_manager.py). No CUDA needed, so this installs on macOS too.
local = [
    "huggingface_hub>=0.34.0",
]
# GPU serving box (2x3090): the vLLM OpenAI-compatible server is our default
# self-hosted backend. Pinned to a recent floor so a fresh `pip install
# -e ".[serve]"` pulls a version new enough for the 2026 catalog models
# (e.g. Gemma 4, Qwen3). vLLM ships CUDA wheels — install this on the GPU host.
serve = [
    "vllm>=0.23.0",
    "huggingface_hub>=0.34.0",
]

[project.scripts]
tradingagents = "cli.main:app"

[tool.setuptools.packages.find]
include = ["tradingagents*", "cli*"]

[tool.setuptools.package-data]
cli = ["static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "unit: fast isolated unit tests",
    "integration: tests requiring external services",
    "smoke: quick sanity-check tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
